src/test/valid/extensionTests/forLoops/forCount.wacc
# simple counting while loop

# Output:
# Can you count to 10?
# 1
# 2
# 3
# 4
# 5
# 6
# 7
# 8
# 9
# 10

# Program:

begin
  println "Can you count to 10?" ;
  for(int j = 1; j <= 10; j = j+1) do
    println j ;
    j = j + 1
  done
end
