src/test/invalid/semanticErr/extensionTests/forLoops/condVarRedeclareInBody.wacc
begin
  for(int i = 0; i < 3; i = i+1) do
    int i = 5;
    println i
  done
end
